--- a/beta/_navbar.html
+++ b/beta/_navbar.html
@@ -17,97 +17,64 @@
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
                         <li class="active">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">About IITK
                                 <b class="caret"></b>                            
                             </a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="index.html">Option1: Landing Page</a></li>
-                                <li><a href="page_home.html">Option2: Header Option</a></li>
-                                <li><a href="page_home4.html">Option3: Revolution Slider</a></li>
-                                <li><a href="page_home5.html">Option4: Amazing Content</a></li>
-                                <li><a href="page_home1.html">Option5: Mixed Content</a></li>
-                                <li><a href="page_home2.html">Option6: Content with Sidebar</a></li>
-                                <li><a href="page_home3.html">Option7: Aplle Style Slider</a></li>
-                                <li><a href="page_home_all.html">Home All In One</a></li>
+                                <li><a href="index.html">Academics</a></li>
+                                <li><a href="page_home.html">Students</a></li>
+                                <li><a href="page_home4.html">Faculty</a></li>
+                                <li><a href="page_home5.html">Extra-Curriculars</a></li>
+                                <li><a href="page_home1.html">Alumni</a></li>
+                                <li><a href="page_home2.html">Links</a></li>
                             </ul>
                             <b class="caret-out"></b>                        
                         </li>
                         <li>
-                            <a href="" class="dropdown-toggle" data-toggle="dropdown">Pages
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">For Companies
                                 <b class="caret"></b>                            
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="page_about.html">About Us</a></li>
-                                <li><a href="page_services.html">Services</a></li>
-                                <li><a href="page_pricing.html">Pricing</a></li>
-                                <li><a href="page_coming_soon.html">Coming Soon</a></li>
-                                <li><a href="page_faq.html">FAQs</a></li>
-                                <li><a href="page_search.html">Search Result</a></li>
-                                <li><a href="page_gallery.html">Gallery</a></li>
-                                <li><a href="page_registration.html">Registration</a></li>
-                                <li><a href="page_login.html">Login</a></li>
-                                <li><a href="page_404.html">404</a></li>
-                                <li><a href="page_clients.html">Clients</a></li>
-                                <li><a href="page_privacy.html">Privacy Policy</a></li>
-                                <li><a href="page_terms.html">Terms of Service</a></li>
-                                <li><a href="page_column_left.html">2 Columns (Left)</a></li>
-                                <li><a href="page_column_right.html">2 Columns (Right)</a></li>
+                                <li><a href="page_about.html">Procedure and Policies</a></li>
+                                <li><a href="page_services.html">Facilities</a></li>
+                                <li><a href="page_pricing.html">Employ Calender</a></li>
+                                <li><a href="page_coming_soon.html">Internships</a></li>
+                                <li><a href="page_faq.html">Brochures</a></li>
+                                <li><a href="page_search.html">Placement Automation System</a></li>
+                                <li><a href="page_gallery.html">Downloads</a></li>
+                                <li><a href="page_registration.html">Job Announcement Form</a></li>
+                                <li><a href="page_login.html">Register with Us</a></li>
+                                <li><a href="page_404.html">FAQs</a></li>
+                                
                             </ul>
                             <b class="caret-out"></b>                        
                         </li>
                         <li>
-                            <a href="" class="dropdown-toggle" data-toggle="dropdown">Features
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">For Students
                                 <b class="caret"></b>                            
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="feature_grid.html">Grid Layout</a></li>
-                                <li><a href="feature_typography.html">Typography</a></li>
-                                <li><a href="feature_thumbnail.html">Thumbnails</a></li>
-                                <li><a href="feature_component.html">Components</a></li>
-                                <li><a href="feature_navigation.html">Navigation</a></li>
-                                <li><a href="feature_table.html">Tables</a></li>
-                                <li><a href="feature_form.html">Forms</a></li>
-                                <li><a href="feature_icons.html">Icons</a></li>
-                                <li><a href="feature_button.html">Buttons</a></li>
+                                <li><a href="feature_grid.html">Career Guidance</a></li>
+                                <li><a href="feature_typography.html">Rules and Regulations</a></li>
+                                <li><a href="feature_thumbnail.html">Placement Automation System</a></li>
+                                <li><a href="feature_component.html">Internships</a></li>
+                                <li><a href="feature_navigation.html">Downloads</a></li>
+                                <li><a href="feature_table.html">FAQs</a></li>
                             </ul>
                             <b class="caret-out"></b>                        
                         </li>
                         <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact Us
                                 <b class="caret"></b>                            
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="portfolio.html">Portfolio</a></li>
-                                <li><a href="portfolio_item.html">Portfolio Item</a></li>
-                                <li><a href="portfolio_2columns.html">Portfolio 2 Columns</a></li>
-                                <li><a href="portfolio_3columns.html">Portfolio 3 Columns</a></li>
-                                <li><a href="portfolio_4columns.html">Portfolio 4 Columns</a></li>
+                                <li><a href="portfolio.html">Reach Us</a></li>
+                                <li><a href="portfolio_3columns.html">Contacts</a></li>
                             </ul>
                             <b class="caret-out"></b>                        
-                        </li>
-                        <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog
-                                <b class="caret"></b>                            
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog_item.html">Blog Item</a></li>
-                                <li><a href="blog_left_sidebar.html">Blog Left Sidebar</a></li>
-                                <li><a href="blog_item_left_sidebar.html">Blog Item Left Sidebar</a></li>
-                            </ul>
-                            <b class="caret-out"></b>                        
-                        </li>
-                        <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact
-                                <b class="caret"></b>                            
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="page_contact.html">Contact Default</a></li>
-                                <li><a href="page_contact1.html">Contact Boxed Map</a></li>
-                            </ul>
-                            <b class="caret-out"></b>                        
-                        </li>
-                        <li><a class="search"><i class="icon-search search-btn"></i></a></li>                               
+                        </li>              
+                        <li><a class="search"><i class="icon-search search-btn"></i></a>
+                        </li>                               
                     </ul>
                     <div class="search-open">
                         <div class="input-append">
