Add new sub-heading class

--- a/beta/_navbar.html
+++ b/beta/_navbar.html
@@ -22,7 +22,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="index.html">Academics</a></li>
-                                <li class="sub-heading">SUB HEADING</li>
+                                <li class="sub-heading"><a href="#">SUB HEADING</a></li>
                                 <li><a href="page_home.html">Students</a></li>
                                 <li><a href="page_home4.html">Faculty</a></li>
                                 <li><a href="page_home5.html">Extra-Curriculars</a></li>
