--- a/beta/_footer.html
+++ b/beta/_footer.html
@@ -10,7 +10,17 @@
 
 	            						
 			</div><!--/span4-->	
-			
+			<div class="span4">
+				<div class="headline"><h3>External Links</h3></div>
+				<ul class="unstyled">
+					<li><a href="#">IITK Home Page</a></li>
+					<li><a href="#">Key Administrators</a></li>
+					<li><a href="#">Students' Gymkhana</a></li>
+					<li><a href="#">Computer Center</a></li>
+					<li><a href="#">Directory</a></li>
+				</ul>
+
+			</div>
 			<div class="span4">
 	            <!-- Monthly Newsletter -->
 		        <div class="headline"><h3>Contact Us</h3></div>	
