--- a/beta/_footer.html
+++ b/beta/_footer.html
@@ -74,6 +74,7 @@
 <script type="text/javascript" src="assets/plugins/parallax-slider/js/modernizr.js"></script>
 <script type="text/javascript" src="assets/plugins/parallax-slider/js/jquery.cslider.js"></script> 
 <script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <!-- JS Page Level -->           
 <script type="text/javascript" src="assets/js/app.js"></script>
 <script type="text/javascript" src="assets/js/pages/index.js"></script>
