--- a/beta/about_us.html
+++ b/beta/about_us.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <!--#include file="_head.html" -->
-
 <body>
   
 
@@ -8,29 +7,34 @@
 
 <!--#include file="_navbar.html" -->
 
-<!--=== Slider ===-->
-
-<div class="slider-inner">
-    <div id="da-slider" class="da-slider">
+<!--=== Breadcrumbs ===-->
+<div class="row-fluid breadcrumbs margin-bottom-40">
+  <div class="container">
+        <h1 class="pull-left">Contacts</h1>
         
-    </div><!--/da-slider-->
-</div><!--/slider-->
-<!--=== End Slider ===-->
-
-<!--=== Purchase Block ===-->
+  </div><!--/container-->
+</div><!--/breadcrumbs-->
 
 <!--=== Content Part ===-->
 <div class="container">     
     <div class="row-fluid margin-bottom-30">
-        <div class="span6">
-            <h2>Office Address</h2>
+        <div class="span3">
+            <div class="headline"><h3>Office Address</h3></div>
+            <div class="row-fluid">
             <address>
-            Students Placement Office<br /> 109,Outreach Building,<br /> IIT Kanpur, Kanpur-208016<br /> UP, India.<br /> Phone: 91-512-259-4433/34<br /> Fax: 91-512-259-4434<br /> email id: <a href="mailto:spo@iitk.ac.in">spo@iitk.ac.in</a>
-            <br /></address>
-
+              Students Placement Office<br /> 
+              109,Outreach Building,<br /> 
+              IIT Kanpur, Kanpur-208016<br /> 
+              UP, India.<br /> 
+              Phone: <a href="tel:+915122594433">91-512-259-4433/34</a><br /> 
+              Fax: 91-512-259-4434<br /> 
+              Email: <a href="mailto:spo@iitk.ac.in">spo@iitk.ac.in</a><br />
+            </address>
+            </div>
         </div>
-        <div class="span6">
-            <iframe src="http://player.vimeo.com/video/9679622" width="100%" height="327" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
+        <div class="span9">
+            <div class="headline"><h3>Find Us</h3></div>
+            <div id="map" class="map map-box map-box-space margin-bottom-40">
         </div>
     </div><!--/row-fluid-->
 
@@ -45,8 +49,7 @@
                 <p>+91 89485 99895</p>
                 <ul class="unstyled inline">
                     <li><a href="#"><i class="icon-facebook"></i></a></li>
-                    <li><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li><a href="#"><i class="icon-google-plus"></i></a></li>
+                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
                 </ul>
             </div>
         </li>
@@ -58,8 +61,7 @@
                 <p>+91 89534 54277</p>
                 <ul class="unstyled inline team">
                     <li><a href="#"><i class="icon-facebook"></i></a></li>
-                    <li><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li><a href="#"><i class="icon-google-plus"></i></a></li>
+                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
                 </ul>
             </div>
         </li>
@@ -71,8 +73,7 @@
                 <p>+91 97935 70664</p>
                 <ul class="unstyled inline team">
                     <li><a href="#"><i class="icon-facebook"></i></a></li>
-                    <li><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li><a href="#"><i class="icon-google-plus"></i></a></li>
+                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
                 </ul>
             </div>
         </li>
@@ -84,8 +85,7 @@
                 <p>+91 76074 57175</p>
                 <ul class="unstyled inline team">
                     <li><a href="#"><i class="icon-facebook"></i></a></li>
-                    <li><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li><a href="#"><i class="icon-google-plus"></i></a></li>
+                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
                 </ul>
             </div>
         </li>
@@ -93,179 +93,184 @@
     <!-- //End Meer Our Team -->
 
     <!-- Our Clients -->
-    <div class="content">
-        <div class="content_resize">
-            <div class="mainbar">
-      
-                <div class="article" style="border:none;" >
-                    <h2>Internship Coordinator</h2>
-<table border=0 cellpadding=0 cellspacing=0 width=750 style='border-collapse:
- collapse;table-layout:fixed;width:600pt'>
-
-<tr>  <td > Pradumn Davey </td> <td ></td> <td ><a href="pradumnd@iitk.ac.in"> pradumnd@iitk.ac.in </a></td>
- <td > 9415946872</td></tr>
-<tr >  <td > Parth Vaswani </td> <td ></td> <td ><a href="vaspar@iitk.ac.in"> vaspar@iitk.ac.in   </a></td>
- <td > 9936375558</td></tr>
-<tr>  <td > Shrey Verma   </td> <td ></td> <td ><a href="shreyv@iitk.ac.in"> shreyv@iitk.ac.in   </a></td>
- <td > 9651762826</td></tr>       
-<![if supportMisalignedColumns]>
- <tr height=0 style='display:none'>
-  <td width=225 style='width:169pt'></td>
-  <td width=60 style='width:45pt'></td>
-  <td width=241 style='width:200pt'></td>
-  <td width=130 style='width:98pt'></td>
- </tr>
- <![endif]>
+ <div class="row-fluid">
+ <div class="span12">
+ <div class="headline"><h3>Internship Co-ordinators</h3></div>
+   <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>EMail</th>
+        <th>Mobile</th>
+      </tr>
+    </thead>
+    <tbody>
+    <tr> <td >Pradumn Davey </td> <td ><a href="pradumnd@iitk.ac.in"> pradumnd@iitk.ac.in </a></td>
+ <td >+91 9415946872</td></tr>
+<tr >  <td > Parth Vaswani </td>  <td ><a href="vaspar@iitk.ac.in"> vaspar@iitk.ac.in   </a></td>
+ <td >+91 9936375558</td></tr>
+<tr>  <td > Shrey Verma   </td>  <td ><a href="shreyv@iitk.ac.in"> shreyv@iitk.ac.in   </a></td>
+ <td >+91 9651762826</td></tr>       
+</tbody>
 </table>
-
-            <h2>Core Team</h2>
-
-
-<table >
-<!--tr><td colspan=4> &nbsp;</td></tr-->
-
-
-
- <tr >
-  <td >PREPARATION COORDINATORS</td>
- </tr>
- <!--<tr ><td colspan=4 style='height:5px;'> &nbsp;</td></tr>-->
-
- <tr>
+</div>
+</div>
+<div class="row-fluid">
+<div class="span12">
+<div class="headline"><h3>Core Team</h3></div>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Designation</th>
+        <th>EMail</th>
+        <th>Mobile</th>
+      <tr>
+    </thead>
+    <tbody>
+    <tr>
   <td > Ankita Jain </td>
-<td ></td> <td ><a href="ankijain@iitk.ac.in" target="_parent">ankijain@iitk.ac.in</a></td>
- <td >9621564400</td>
+<td >Prepartion Co-ordinator</td> <td ><a href="ankijain@iitk.ac.in" target="_parent">ankijain@iitk.ac.in</a></td>
+ <td >+91 9621564400</td>
 </tr>
  <tr>
   <td > Harsh Pokharna </td>
-<td ></td> <td ><a href="  " target="_parent">  </a></td>
+<td >Prepartion Co-ordinator</td> <td ><a href="  " target="_parent">  </a></td>
 <td >  </td>
 </tr>
  <tr>
   <td > Anchal Goyal </td>
-<td ></td> <td ><a href="anchalg@iitk.ac.in" target="_parent">anchalg@iitk.ac.in</a></td>
-<td >7607457002</td>
+<td >Prepartion Co-ordinator</td> <td ><a href="anchalg@iitk.ac.in" target="_parent">anchalg@iitk.ac.in</a></td>
+<td >+91 7607457002</td>
 </tr>
 
- <tr >
-  <td >PITCHING COORDINATORS</td>
- </tr>
+
 
  <tr>
   <td > Mridul Agarwal </td>
-<td ></td><td class=xl168><a href="mridagar@iitk.ac.in" target="_parent"> mridagar@iitk.ac.in </td>
-<td >8853186845</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mridagar@iitk.ac.in" target="_parent"> mridagar@iitk.ac.in </td>
+<td >+91 8853186845</td>
 </tr>
  <tr>
   <td > Rishabh Gupta </td>
-<td ></td><td class=xl168><a href="grishabh@iitk.ac.in" target="_parent"> grishabh@iitk.ac.in </td>
-<td >9005673988</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="grishabh@iitk.ac.in" target="_parent"> grishabh@iitk.ac.in </td>
+<td >+91 9005673988</td>
 </tr>
  <tr>
   <td > Abhishek Ranjan </td>
-<td ></td><td class=xl168><a href="abhiran@iitk.ac.in" target="_parent"> abhiran@iitk.ac.in </td>
-<td >8604176124</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="abhiran@iitk.ac.in" target="_parent"> abhiran@iitk.ac.in </td>
+<td >+91 8604176124</td>
 </tr>
  <tr>
   <td > Shivam Trivedi </td>
-<td ></td><td class=xl168><a href="strivedi@iitk.ac.in" target="_parent"> strivedi@iitk.ac.in </td>
-<td >9565448866</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="strivedi@iitk.ac.in" target="_parent"> strivedi@iitk.ac.in </td>
+<td >+91 9565448866</td>
 </tr>
  <tr>
   <td > Neha Lahri </td>
-<td ></td><td class=xl168><a href="nehal@iitk.ac.in" target="_parent"> nehal@iitk.ac.in </td>
-<td >9559754567</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="nehal@iitk.ac.in" target="_parent"> nehal@iitk.ac.in </td>
+<td >+91 9559754567</td>
 </tr>
  <tr>
   <td > Swati Tiwari </td>
-<td ></td><td class=xl168><a href="tswati@iitk.ac.in" target="_parent"> tswati@iitk.ac.in </td>
-<td >7607481202</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="tswati@iitk.ac.in" target="_parent"> tswati@iitk.ac.in </td>
+<td >+91 7607481202</td>
 </tr>
  <tr>
   <td > Kunal Mishra </td>
-<td ></td><td class=xl168><a href="kunalm@iitk.ac.in" target="_parent"> kunalm@iitk.ac.in </td>
-<td >9455816057</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="kunalm@iitk.ac.in" target="_parent"> kunalm@iitk.ac.in </td>
+<td >+91 9455816057</td>
 </tr>
  <tr>
   <td > Parag Verma </td>
-<td ></td><td class=xl168><a href="paragdgu@iitk.ac.in" target="_parent"> paragdgu@iitk.ac.in </td>
-<td >8853898061</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="paragdgu@iitk.ac.in" target="_parent"> paragdgu@iitk.ac.in </td>
+<td >+91 8853898061</td>
 </tr>
  <tr>
   <td > Smriti Kumari </td>
-<td ></td><td class=xl168><a href="smritik@iitk.ac.in" target="_parent"> smritik@iitk.ac.in </td>
-<td >8765858571</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="smritik@iitk.ac.in" target="_parent"> smritik@iitk.ac.in </td>
+<td >+91 8765858571</td>
 </tr>
  <tr>
   <td > Soham Sarvadhikari </td>
-<td ></td><td class=xl168><a href="soham@iitk.ac.in" target="_parent"> soham@iitk.ac.in </td>
-<td >7376217035</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="soham@iitk.ac.in" target="_parent"> soham@iitk.ac.in </td>
+<td >+91 7376217035</td>
 </tr>
  <tr>
   <td > Sapan Jain </td>
-<td ></td><td class=xl168><a href="sapanjn@iitk.ac.in" target="_parent"> sapanjn@iitk.ac.in </td>
-<td >8953449196</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="sapanjn@iitk.ac.in" target="_parent"> sapanjn@iitk.ac.in </td>
+<td >+91 8953449196</td>
 </tr>
  <tr>
   <td > Mohit Garg </td>
-<td ></td><td class=xl168><a href="gmohit@iitk.ac.in" target="_parent"> gmohit@iitk.ac.in </td>
-<td >9005666779</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="gmohit@iitk.ac.in" target="_parent"> gmohit@iitk.ac.in </td>
+<td >+91 9005666779</td>
 </tr>
  <tr>
   <td > Rachit Jain </td>
-<td ></td><td class=xl168><a href="rachitja@iitk.ac.in" target="_parent"> rachitja@iitk.ac.in </td>
-<td >9554884757</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="rachitja@iitk.ac.in" target="_parent"> rachitja@iitk.ac.in </td>
+<td >+91 9554884757</td>
 </tr>
+</tbody>
+</table>
 
+</div>
+</div>
  
- 
- <!--tr><td height=10 colspan=4> &nbsp;</td></tr-->
- <tr >
-  <td >DEPARTMENTAL
-  PLACEMENT COORDINATORS</td>
- </tr>
-   <!--tr height=10><td colspan=4> &nbsp;</td></tr-->
-</tr>
+<div class="row-fluid">
+<div class="span12">
+<div class="headline"><h3>Departmental Co-ordinators</h3></div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Department</th>
+      <th>EMail</th>
+      <th>Phone</th>
+    </tr>
+  </thead>
+ <tbody>
+
  <tr>
   <td > Ankit Deo </td>
 <td >Aeronautical Engineering</td>
 <td ><a href="ankitdi@iitk.ac.in">ankitdi@iitk.ac.in</td>
-<td >7607490031</td>
+<td >+91 7607490031</td>
 
 </tr>
  <tr>
   <td > K Kishore Kumar </td>
 <td >Aeronautical Engineering</td>
 <td ><a href="kkkishor@iitk.ac.in">kkkishor@iitk.ac.in</td>
-<td >7897768722</td>
+<td >+91 7897768722</td>
 
 </tr>
  <tr>
   <td > Surjit Singh Gautam </td>
 <td >Biological Sciences and Engineering</td>
 <td ><a href="ssgautam@iitk.ac.in">ssgautam@iitk.ac.in</td>
-<td >8960106457</td>
+<td >+91 8960106457</td>
 
 </tr>
  <tr>
   <td > Akhil Yadav </td>
 <td >Civil Engineering</td>
 <td ><a href="akhily@iitk.ac.in">akhily@iitk.ac.in</td>
-<td >9005673809</td>
+<td >+91 9005673809</td>
 
 </tr>
  <tr>
   <td > Hemant Gehlot </td>
 <td >Civil Engineering</td>
 <td ><a href="hemantgt@iitk.ac.in">hemantgt@iitk.ac.in</td>
-<td >9450907909</td>
+<td >+91 9450907909</td>
 
 </tr>
  <tr>
   <td > Keshav Lunani </td>
 <td >Civil Engineering</td>
 <td ><a href="lkeshav@iitk.ac.in">lkeshav@iitk.ac.in</td>
-<td >9651789898</td>
+<td >+91 9651789898</td>
 
 </tr>
  <tr>
@@ -279,35 +284,35 @@
   <td > Nishant Bhartiya </td>
 <td >Chemical Enginnering</td>
 <td ><a href="nishantb@iitk.ac.in">nishantb@iitk.ac.in</td>
-<td >7607457183</td>
+<td >+91 7607457183</td>
 
 </tr>
  <tr>
   <td > Rajkumar Singh </td>
 <td >Chemical Enginnering</td>
 <td ><a href="raksingh@iitk.ac.in">raksingh@iitk.ac.in</td>
-<td >7607454495</td>
+<td >+91 7607454495</td>
 
 </tr>
  <tr>
   <td > Harish </td>
 <td >Chemical Engineering</td>
 <td ><a href="hmalagar">hmalagar</td>
-<td >7376216844</td>
+<td >+91 7376216844</td>
 
 </tr>
  <tr>
   <td > George Kuruvilla </td>
 <td >Computer Science and Engineering</td>
 <td ><a href="georgekk@iitk.ac.in">georgekk@iitk.ac.in</td>
-<td >7607315553</td>
+<td >+91 7607315553</td>
 
 </tr>
  <tr>
   <td > Sudhanshu Tamhankar </td>
 <td >Computer Science and Engineering</td>
 <td ><a href="stomhank@iitk.ac.in">stomhank@iitk.ac.in</td>
-<td >8953432272</td>
+<td >+91 8953432272</td>
 
 </tr>
  <tr>
@@ -321,105 +326,105 @@
   <td > Vivek Shankar </td>
 <td >Design Programme</td>
 <td ><a href="viveksn@iitk.ac.in">viveksn@iitk.ac.in</td>
-<td >8953436143</td>
+<td >+91 8953436143</td>
 
 </tr>
  <tr>
   <td > Piyush Gupta </td>
 <td >Economics</td>
 <td ><a href="ppiyush@iitk.ac.in">ppiyush@iitk.ac.in</td>
-<td >9651648844</td>
+<td >+91 9651648844</td>
 
 </tr>
  <tr>
   <td > Amalladinne Vamsi Krishna </td>
 <td >Electrical Engineering</td>
 <td ><a href="vamsikr@iitk.ac.in">vamsikr@iitk.ac.in</td>
-<td >8874356844</td>
+<td >+91 8874356844</td>
 
 </tr>
  <tr>
   <td > Amrita Bal </td>
 <td >Electrical Engineering</td>
 <td ><a href="amribal@iitk.ac.in">amribal@iitk.ac.in</td>
-<td >8953441457</td>
+<td >+91 8953441457</td>
 
 </tr>
  <tr>
   <td > Shreyan Chowdhury </td>
 <td >Electrical Engineering</td>
 <td ><a href="shreyan@iitk.ac.in">shreyan@iitk.ac.in</td>
-<td >9198264494</td>
+<td >+91 9198264494</td>
 
 </tr>
  <tr>
   <td > Shubham Gupta </td>
 <td >Electrical Engineering</td>
 <td ><a href="shubhamg@iitk.ac.in">shubhamg@iitk.ac.in</td>
-<td >7607454531</td>
+<td >+91 7607454531</td>
 
 </tr>
  <tr>
   <td > Sagar Bharadwaj </td>
 <td >Industrial and Management Engineering</td>
 <td ><a href="sagarbhd@iitk.ac.in">sagarbhd@iitk.ac.in</td>
-<td >9559323300</td>
+<td >+91 9559323300</td>
 
 </tr>
  <tr>
   <td > Tushar Vasantrao </td>
 <td >Industrial and Management Engineering</td>
 <td ><a href="tush@iitk.ac.in">tush@iitk.ac.in</td>
-<td >8081091590</td>
+<td >+91 8081091590</td>
 
 </tr>
  <tr>
   <td > Avinash Srivastava </td>
 <td >Mechanical Engineering</td>
 <td ><a href="avinashs@iitk.ac.in">avinashs@iitk.ac.in</td>
-<td >8765192036</td>
+<td >+91 8765192036</td>
 
 </tr>
  <tr>
   <td > Vaibhav Chaturvedi </td>
 <td >Mechanical Engineering</td>
 <td ><a href="vaibchat@iitk.ac.in">vaibchat@iitk.ac.in</td>
-<td >9793565324</td>
+<td >+91 9793565324</td>
 
 </tr>
  <tr>
   <td > Vaibhav Sinha </td>
 <td >Mechanical Engineering</td>
 <td ><a href="vasinha@iitk.ac.in">vasinha@iitk.ac.in</td>
-<td >7607454538</td>
+<td >+91 7607454538</td>
 
 </tr>
  <tr>
   <td > Abhishek Dhandharia </td>
 <td >Math and Scientific Computing</td>
 <td ><a href="abhidhan@iitk.ac.in">abhidhan@iitk.ac.in</td>
-<td >8960370701</td>
+<td >+91 8960370701</td>
 
 </tr>
  <tr>
   <td > Chirag Maheshwari </td>
 <td >Material Sciences and Engineering</td>
 <td ><a href="chirag@iitk.ac.in">chirag@iitk.ac.in</td>
-<td >9451401187</td>
+<td >+91 9451401187</td>
 
 </tr>
  <tr>
   <td > Manjeet Kumar </td>
 <td >Material Sciences and Engineering</td>
 <td ><a href="manjeet@iitk.ac.in">manjeet@iitk.ac.in</td>
-<td >9005671550</td>
+<td >+91 9005671550</td>
 
 </tr>
  <tr>
   <td > Nitin Sharma </td>
 <td >Material Sciences and Engineering</td>
 <td ><a href="nitinksh@iitk.ac.in">nitinksh@iitk.ac.in</td>
-<td >9721272714</td>
+<td >+91 9721272714</td>
 
 </tr>
  <tr>
@@ -433,21 +438,21 @@
   <td > Manas Kumar </td>
 <td >Nuclear Engineering</td>
 <td ><a href="manaskr@iitk.ac.in">manaskr@iitk.ac.in</td>
-<td >8127576268</td>
+<td >+91 8127576268</td>
 
 </tr>
  <tr>
   <td > Niraj Kumar </td>
 <td >Physics</td>
 <td ><a href="kniraj@iitk.ac.in">kniraj@iitk.ac.in</td>
-<td >9794284963</td>
+<td >+91 9794284963</td>
 
 </tr>
  <tr>
   <td > Uddipto Charaborty </td>
 <td >Statistics</td>
 <td ><a href="uddipto@iitk.ac.in">uddipto@iitk.ac.in</td>
-<td >7897768117</td>
+<td >+91 7897768117</td>
 
 </tr>
  <tr>
@@ -475,46 +480,28 @@
   <td > Harish </td>
 <td >Chemistry</td>
 <td ><a href="hmalagar@iitk.ac.in">hmalagar@iitk.ac.in</td>
-<td >7376216844</td>
+<td >+91 7376216844</td>
 
- 
- <!--tr><td colspan=4> &nbsp;</td></tr-->
- <tr style=''>
-  <td colspan=3 style='width:493pt; border:1px solid #dedede; margin:10px 0px 10px 0px;
-  padding:10px 10px 10px 10px; font:bold 14px Arial, Helvetica, sans-serif;'>WEB TEAM</td>
- </tr>
- <!--tr height=10><td height=10 colspan=4> &nbsp;</td></tr-->
+ </tbody>
 
- <tr>
-  <td >Aritra Saha</td>
-  <td>Head</td>
-  <td ><a href="mailto:aritra@iitk.ac.in" target="_parent">aritra@iitk.ac.in</a></td>
-   <td >9005850377</td>
- </tr>
- <tr>
-  <td >Pratik Agarwal</td>
-  <td>Web Developer</td>
-  <td ><a href="mailto:pratikag@iitk.ac.in" target="_parent">pratikag@iitk.ac.in</a></td>
-   <td >8953195212</td>
- </tr>
- <tr>
-  <td >Sanchit Gupta</td>
-  <td>Web Developer</td>
-  <td ><a href="mailto:sanchitg@iitk.ac.in" target="_parent">sanchitg@iitk.ac.in</a></td>
-   <td >8953342622</td>
- </tr>
- <![if supportMisalignedColumns]>
- <tr height=0 style='display:none'>
-  <td width=225 style='width:169pt'></td>
-  <td width=60 style='width:45pt'></td>
-  <td width=241 style='width:200pt'></td>
-  <td width=130 style='width:98pt'></td>
- </tr>
- <![endif]>
 </table><!--/flexslider-->
+</div>
+</div>
     <!-- //End Our Clients -->
 </div><!--/container-->        
 <!--=== End Content Part ===-->
+
 <!--#include file="_footer.html" -->
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="assets/plugins/gmap/gmap.js"></script>
+<script type="text/javascript" src="assets/js/app.js"></script>
+<script type="text/javascript" src="assets/js/pages/contact.js"></script>
+<script type="text/javascript">
+    jQuery(document).ready(function() {
+        App.init();
+        App.initSliders();                
+        Contact.initMap();        
+    });
+</script>
 </body>
 </html>	
