Complete About Page

--- a/beta/about_us.html
+++ b/beta/about_us.html
@@ -19,6 +19,7 @@
 <div class="container">     
     <div class="row-fluid margin-bottom-30">
         <div class="span3">
+          <div class="row-fluid">
             <div class="headline"><h3>Office Address</h3></div>
             <div class="row-fluid">
             <address>
@@ -31,6 +32,11 @@
               Email: <a href="mailto:spo@iitk.ac.in">spo@iitk.ac.in</a><br />
             </address>
             </div>
+            <div class="headline"><h3>Getting Here</h3></div>
+            <div class="row-fluid">
+              <a href="directions.html" class="btn-u">Directions &amp; Hotels </a>
+            </div>
+        </div>
         </div>
         <div class="span9">
             <div class="headline"><h3>Find Us</h3></div>
@@ -105,11 +111,11 @@
       </tr>
     </thead>
     <tbody>
-    <tr> <td >Pradumn Davey </td> <td ><a href="pradumnd@iitk.ac.in"> pradumnd@iitk.ac.in </a></td>
+    <tr> <td >Pradumn Davey </td> <td ><a href="mailto:pradumnd@iitk.ac.in"> pradumnd@iitk.ac.in </a></td>
  <td >+91 9415946872</td></tr>
-<tr >  <td > Parth Vaswani </td>  <td ><a href="vaspar@iitk.ac.in"> vaspar@iitk.ac.in   </a></td>
+<tr >  <td > Parth Vaswani </td>  <td ><a href="mailto:vaspar@iitk.ac.in"> vaspar@iitk.ac.in   </a></td>
  <td >+91 9936375558</td></tr>
-<tr>  <td > Shrey Verma   </td>  <td ><a href="shreyv@iitk.ac.in"> shreyv@iitk.ac.in   </a></td>
+<tr>  <td > Shrey Verma   </td>  <td ><a href="mailto:shreyv@iitk.ac.in"> shreyv@iitk.ac.in   </a></td>
  <td >+91 9651762826</td></tr>       
 </tbody>
 </table>
@@ -130,17 +136,17 @@
     <tbody>
     <tr>
   <td > Ankita Jain </td>
-<td >Prepartion Co-ordinator</td> <td ><a href="ankijain@iitk.ac.in" target="_parent">ankijain@iitk.ac.in</a></td>
+<td >Prepartion Co-ordinator</td> <td ><a href="mailto:mailto:ankijain@iitk.ac.in" target="_parent">ankijain@iitk.ac.in</a></td>
  <td >+91 9621564400</td>
 </tr>
  <tr>
   <td > Harsh Pokharna </td>
-<td >Prepartion Co-ordinator</td> <td ><a href="  " target="_parent">  </a></td>
+<td >Prepartion Co-ordinator</td> <td ><a href="mailto:  " target="_parent">  </a></td>
 <td >  </td>
 </tr>
  <tr>
   <td > Anchal Goyal </td>
-<td >Prepartion Co-ordinator</td> <td ><a href="anchalg@iitk.ac.in" target="_parent">anchalg@iitk.ac.in</a></td>
+<td >Prepartion Co-ordinator</td> <td ><a href="mailto:anchalg@iitk.ac.in" target="_parent">anchalg@iitk.ac.in</a></td>
 <td >+91 7607457002</td>
 </tr>
 
@@ -148,67 +154,67 @@
 
  <tr>
   <td > Mridul Agarwal </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="mridagar@iitk.ac.in" target="_parent"> mridagar@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:mridagar@iitk.ac.in" target="_parent"> mridagar@iitk.ac.in </td>
 <td >+91 8853186845</td>
 </tr>
  <tr>
   <td > Rishabh Gupta </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="grishabh@iitk.ac.in" target="_parent"> grishabh@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:grishabh@iitk.ac.in" target="_parent"> grishabh@iitk.ac.in </td>
 <td >+91 9005673988</td>
 </tr>
  <tr>
   <td > Abhishek Ranjan </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="abhiran@iitk.ac.in" target="_parent"> abhiran@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:abhiran@iitk.ac.in" target="_parent"> abhiran@iitk.ac.in </td>
 <td >+91 8604176124</td>
 </tr>
  <tr>
   <td > Shivam Trivedi </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="strivedi@iitk.ac.in" target="_parent"> strivedi@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:strivedi@iitk.ac.in" target="_parent"> strivedi@iitk.ac.in </td>
 <td >+91 9565448866</td>
 </tr>
  <tr>
   <td > Neha Lahri </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="nehal@iitk.ac.in" target="_parent"> nehal@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:nehal@iitk.ac.in" target="_parent"> nehal@iitk.ac.in </td>
 <td >+91 9559754567</td>
 </tr>
  <tr>
   <td > Swati Tiwari </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="tswati@iitk.ac.in" target="_parent"> tswati@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:tswati@iitk.ac.in" target="_parent"> tswati@iitk.ac.in </td>
 <td >+91 7607481202</td>
 </tr>
  <tr>
   <td > Kunal Mishra </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="kunalm@iitk.ac.in" target="_parent"> kunalm@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:kunalm@iitk.ac.in" target="_parent"> kunalm@iitk.ac.in </td>
 <td >+91 9455816057</td>
 </tr>
  <tr>
   <td > Parag Verma </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="paragdgu@iitk.ac.in" target="_parent"> paragdgu@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:paragdgu@iitk.ac.in" target="_parent"> paragdgu@iitk.ac.in </td>
 <td >+91 8853898061</td>
 </tr>
  <tr>
   <td > Smriti Kumari </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="smritik@iitk.ac.in" target="_parent"> smritik@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:smritik@iitk.ac.in" target="_parent"> smritik@iitk.ac.in </td>
 <td >+91 8765858571</td>
 </tr>
  <tr>
   <td > Soham Sarvadhikari </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="soham@iitk.ac.in" target="_parent"> soham@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:soham@iitk.ac.in" target="_parent"> soham@iitk.ac.in </td>
 <td >+91 7376217035</td>
 </tr>
  <tr>
   <td > Sapan Jain </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="sapanjn@iitk.ac.in" target="_parent"> sapanjn@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:sapanjn@iitk.ac.in" target="_parent"> sapanjn@iitk.ac.in </td>
 <td >+91 8953449196</td>
 </tr>
  <tr>
   <td > Mohit Garg </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="gmohit@iitk.ac.in" target="_parent"> gmohit@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:gmohit@iitk.ac.in" target="_parent"> gmohit@iitk.ac.in </td>
 <td >+91 9005666779</td>
 </tr>
  <tr>
   <td > Rachit Jain </td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="rachitja@iitk.ac.in" target="_parent"> rachitja@iitk.ac.in </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:rachitja@iitk.ac.in" target="_parent"> rachitja@iitk.ac.in </td>
 <td >+91 9554884757</td>
 </tr>
 </tbody>
@@ -234,252 +240,252 @@
  <tr>
   <td > Ankit Deo </td>
 <td >Aeronautical Engineering</td>
-<td ><a href="ankitdi@iitk.ac.in">ankitdi@iitk.ac.in</td>
+<td ><a href="mailto:ankitdi@iitk.ac.in">ankitdi@iitk.ac.in</td>
 <td >+91 7607490031</td>
 
 </tr>
  <tr>
   <td > K Kishore Kumar </td>
 <td >Aeronautical Engineering</td>
-<td ><a href="kkkishor@iitk.ac.in">kkkishor@iitk.ac.in</td>
+<td ><a href="mailto:kkkishor@iitk.ac.in">kkkishor@iitk.ac.in</td>
 <td >+91 7897768722</td>
 
 </tr>
  <tr>
   <td > Surjit Singh Gautam </td>
 <td >Biological Sciences and Engineering</td>
-<td ><a href="ssgautam@iitk.ac.in">ssgautam@iitk.ac.in</td>
+<td ><a href="mailto:ssgautam@iitk.ac.in">ssgautam@iitk.ac.in</td>
 <td >+91 8960106457</td>
 
 </tr>
  <tr>
   <td > Akhil Yadav </td>
 <td >Civil Engineering</td>
-<td ><a href="akhily@iitk.ac.in">akhily@iitk.ac.in</td>
+<td ><a href="mailto:akhily@iitk.ac.in">akhily@iitk.ac.in</td>
 <td >+91 9005673809</td>
 
 </tr>
  <tr>
   <td > Hemant Gehlot </td>
 <td >Civil Engineering</td>
-<td ><a href="hemantgt@iitk.ac.in">hemantgt@iitk.ac.in</td>
+<td ><a href="mailto:hemantgt@iitk.ac.in">hemantgt@iitk.ac.in</td>
 <td >+91 9450907909</td>
 
 </tr>
  <tr>
   <td > Keshav Lunani </td>
 <td >Civil Engineering</td>
-<td ><a href="lkeshav@iitk.ac.in">lkeshav@iitk.ac.in</td>
+<td ><a href="mailto:lkeshav@iitk.ac.in">lkeshav@iitk.ac.in</td>
 <td >+91 9651789898</td>
 
 </tr>
  <tr>
   <td > Avijeet Chatterjee </td>
 <td >CELT</td>
-<td ><a href="avijitc@iitk.ac.in">avijitc@iitk.ac.in</td>
+<td ><a href="mailto:avijitc@iitk.ac.in">avijitc@iitk.ac.in</td>
 <td > </td>
 
 </tr>
  <tr>
   <td > Nishant Bhartiya </td>
 <td >Chemical Enginnering</td>
-<td ><a href="nishantb@iitk.ac.in">nishantb@iitk.ac.in</td>
+<td ><a href="mailto:nishantb@iitk.ac.in">nishantb@iitk.ac.in</td>
 <td >+91 7607457183</td>
 
 </tr>
  <tr>
   <td > Rajkumar Singh </td>
 <td >Chemical Enginnering</td>
-<td ><a href="raksingh@iitk.ac.in">raksingh@iitk.ac.in</td>
+<td ><a href="mailto:raksingh@iitk.ac.in">raksingh@iitk.ac.in</td>
 <td >+91 7607454495</td>
 
 </tr>
  <tr>
   <td > Harish </td>
 <td >Chemical Engineering</td>
-<td ><a href="hmalagar">hmalagar</td>
+<td ><a href="mailto:hmalagar">hmalagar</td>
 <td >+91 7376216844</td>
 
 </tr>
  <tr>
   <td > George Kuruvilla </td>
 <td >Computer Science and Engineering</td>
-<td ><a href="georgekk@iitk.ac.in">georgekk@iitk.ac.in</td>
+<td ><a href="mailto:georgekk@iitk.ac.in">georgekk@iitk.ac.in</td>
 <td >+91 7607315553</td>
 
 </tr>
  <tr>
   <td > Sudhanshu Tamhankar </td>
 <td >Computer Science and Engineering</td>
-<td ><a href="stomhank@iitk.ac.in">stomhank@iitk.ac.in</td>
+<td ><a href="mailto:stomhank@iitk.ac.in">stomhank@iitk.ac.in</td>
 <td >+91 8953432272</td>
 
 </tr>
  <tr>
   <td > Shubhdeep Kochhar </td>
 <td >Computer Science and Engineering</td>
-<td ><a href="  ">  </td>
+<td ><a href="mailto:  ">  </td>
 <td ></td>
 
 </tr>
  <tr>
   <td > Vivek Shankar </td>
 <td >Design Programme</td>
-<td ><a href="viveksn@iitk.ac.in">viveksn@iitk.ac.in</td>
+<td ><a href="mailto:viveksn@iitk.ac.in">viveksn@iitk.ac.in</td>
 <td >+91 8953436143</td>
 
 </tr>
  <tr>
   <td > Piyush Gupta </td>
 <td >Economics</td>
-<td ><a href="ppiyush@iitk.ac.in">ppiyush@iitk.ac.in</td>
+<td ><a href="mailto:ppiyush@iitk.ac.in">ppiyush@iitk.ac.in</td>
 <td >+91 9651648844</td>
 
 </tr>
  <tr>
   <td > Amalladinne Vamsi Krishna </td>
 <td >Electrical Engineering</td>
-<td ><a href="vamsikr@iitk.ac.in">vamsikr@iitk.ac.in</td>
+<td ><a href="mailto:vamsikr@iitk.ac.in">vamsikr@iitk.ac.in</td>
 <td >+91 8874356844</td>
 
 </tr>
  <tr>
   <td > Amrita Bal </td>
 <td >Electrical Engineering</td>
-<td ><a href="amribal@iitk.ac.in">amribal@iitk.ac.in</td>
+<td ><a href="mailto:amribal@iitk.ac.in">amribal@iitk.ac.in</td>
 <td >+91 8953441457</td>
 
 </tr>
  <tr>
   <td > Shreyan Chowdhury </td>
 <td >Electrical Engineering</td>
-<td ><a href="shreyan@iitk.ac.in">shreyan@iitk.ac.in</td>
+<td ><a href="mailto:shreyan@iitk.ac.in">shreyan@iitk.ac.in</td>
 <td >+91 9198264494</td>
 
 </tr>
  <tr>
   <td > Shubham Gupta </td>
 <td >Electrical Engineering</td>
-<td ><a href="shubhamg@iitk.ac.in">shubhamg@iitk.ac.in</td>
+<td ><a href="mailto:shubhamg@iitk.ac.in">shubhamg@iitk.ac.in</td>
 <td >+91 7607454531</td>
 
 </tr>
  <tr>
   <td > Sagar Bharadwaj </td>
 <td >Industrial and Management Engineering</td>
-<td ><a href="sagarbhd@iitk.ac.in">sagarbhd@iitk.ac.in</td>
+<td ><a href="mailto:sagarbhd@iitk.ac.in">sagarbhd@iitk.ac.in</td>
 <td >+91 9559323300</td>
 
 </tr>
  <tr>
   <td > Tushar Vasantrao </td>
 <td >Industrial and Management Engineering</td>
-<td ><a href="tush@iitk.ac.in">tush@iitk.ac.in</td>
+<td ><a href="mailto:tush@iitk.ac.in">tush@iitk.ac.in</td>
 <td >+91 8081091590</td>
 
 </tr>
  <tr>
   <td > Avinash Srivastava </td>
 <td >Mechanical Engineering</td>
-<td ><a href="avinashs@iitk.ac.in">avinashs@iitk.ac.in</td>
+<td ><a href="mailto:avinashs@iitk.ac.in">avinashs@iitk.ac.in</td>
 <td >+91 8765192036</td>
 
 </tr>
  <tr>
   <td > Vaibhav Chaturvedi </td>
 <td >Mechanical Engineering</td>
-<td ><a href="vaibchat@iitk.ac.in">vaibchat@iitk.ac.in</td>
+<td ><a href="mailto:vaibchat@iitk.ac.in">vaibchat@iitk.ac.in</td>
 <td >+91 9793565324</td>
 
 </tr>
  <tr>
   <td > Vaibhav Sinha </td>
 <td >Mechanical Engineering</td>
-<td ><a href="vasinha@iitk.ac.in">vasinha@iitk.ac.in</td>
+<td ><a href="mailto:vasinha@iitk.ac.in">vasinha@iitk.ac.in</td>
 <td >+91 7607454538</td>
 
 </tr>
  <tr>
   <td > Abhishek Dhandharia </td>
 <td >Math and Scientific Computing</td>
-<td ><a href="abhidhan@iitk.ac.in">abhidhan@iitk.ac.in</td>
+<td ><a href="mailto:abhidhan@iitk.ac.in">abhidhan@iitk.ac.in</td>
 <td >+91 8960370701</td>
 
 </tr>
  <tr>
   <td > Chirag Maheshwari </td>
 <td >Material Sciences and Engineering</td>
-<td ><a href="chirag@iitk.ac.in">chirag@iitk.ac.in</td>
+<td ><a href="mailto:chirag@iitk.ac.in">chirag@iitk.ac.in</td>
 <td >+91 9451401187</td>
 
 </tr>
  <tr>
   <td > Manjeet Kumar </td>
 <td >Material Sciences and Engineering</td>
-<td ><a href="manjeet@iitk.ac.in">manjeet@iitk.ac.in</td>
+<td ><a href="mailto:manjeet@iitk.ac.in">manjeet@iitk.ac.in</td>
 <td >+91 9005671550</td>
 
 </tr>
  <tr>
   <td > Nitin Sharma </td>
 <td >Material Sciences and Engineering</td>
-<td ><a href="nitinksh@iitk.ac.in">nitinksh@iitk.ac.in</td>
+<td ><a href="mailto:nitinksh@iitk.ac.in">nitinksh@iitk.ac.in</td>
 <td >+91 9721272714</td>
 
 </tr>
  <tr>
   <td > Harsh Vardhan </td>
 <td >MSP</td>
-<td ><a href="  ">  </td>
+<td ><a href="mailto:  ">  </td>
 <td >  </td>
 
 </tr>
  <tr>
   <td > Manas Kumar </td>
 <td >Nuclear Engineering</td>
-<td ><a href="manaskr@iitk.ac.in">manaskr@iitk.ac.in</td>
+<td ><a href="mailto:manaskr@iitk.ac.in">manaskr@iitk.ac.in</td>
 <td >+91 8127576268</td>
 
 </tr>
  <tr>
   <td > Niraj Kumar </td>
 <td >Physics</td>
-<td ><a href="kniraj@iitk.ac.in">kniraj@iitk.ac.in</td>
+<td ><a href="mailto:kniraj@iitk.ac.in">kniraj@iitk.ac.in</td>
 <td >+91 9794284963</td>
 
 </tr>
  <tr>
   <td > Uddipto Charaborty </td>
 <td >Statistics</td>
-<td ><a href="uddipto@iitk.ac.in">uddipto@iitk.ac.in</td>
+<td ><a href="mailto:uddipto@iitk.ac.in">uddipto@iitk.ac.in</td>
 <td >+91 7897768117</td>
 
 </tr>
  <tr>
   <td > Apratim Tiwari </td>
 <td >Chemistry</td>
-<td ><a href="  ">  </td>
+<td ><a href="mailto:  ">  </td>
 <td >  </td>
 
 </tr>
  <tr>
   <td > Khushboo Gupta </td>
 <td >  </td>
-<td ><a href="  ">  </td>
+<td ><a href="mailto:  ">  </td>
 <td >  </td>
 
 </tr>
  <tr>
   <td > Pravin Sreenivasan </td>
 <td >MBA</td>
-<td ><a href="  ">  </td>
+<td ><a href="mailto:  ">  </td>
 <td >  </td>
 
 </tr>
  <tr>
   <td > Harish </td>
 <td >Chemistry</td>
-<td ><a href="hmalagar@iitk.ac.in">hmalagar@iitk.ac.in</td>
+<td ><a href="mailto:hmalagar@iitk.ac.in">hmalagar@iitk.ac.in</td>
 <td >+91 7376216844</td>
 
  </tbody>
@@ -487,7 +493,7 @@
 </table><!--/flexslider-->
 </div>
 </div>
-    <!-- //End Our Clients -->
+</div>   <!-- //End Our Clients -->
 </div><!--/container-->        
 <!--=== End Content Part ===-->
 
