Finish reach us

--- a/beta/about_us.html
+++ b/beta/about_us.html
@@ -40,7 +40,7 @@
         </div>
         <div class="span9">
             <div class="headline"><h3>Find Us</h3></div>
-            <div id="map" class="map map-box map-box-space margin-bottom-40">
+            <div id="map" class="map map-box map-box-space margin-bottom-40"></div>
         </div>
     </div><!--/row-fluid-->
 
