Add intern policy and logo

--- a/beta/_navbar.html
+++ b/beta/_navbar.html
@@ -3,7 +3,8 @@
     <div class="container"> 
         <!-- Logo -->       
         <div class="logo">                                             
-            <a href="index.html"><img id="logo-header" src="assets/img/logo1-default.png" alt="Logo"></a>
+            <a href="index.html"><img id="logo-header" src="assets/img/spologoonly.png" alt="Logo">
+            Students' Placement Office</a>
         </div><!-- /logo -->        
                                     
         <!-- Menu -->       
