--- a/beta/_sidebar.html
+++ b/beta/_sidebar.html
@@ -14,7 +14,7 @@
         <ul class="unstyled">
             <li><a href="#"><i class="icon-phone"></i> +91 259 255 33 44</a></li>
             <li><a href="#"><i class="icon-envelope-alt"></i> spo@iitk.ac.in</a></li>
-            <li><a><i class="icon-map-marker"></i> 109, Outreach Building, IIT Kanpur</a></li>
+            <li><a><i class="icon-map-marker"></i> &nbsp;109, Outreach Building, IIT Kanpur</a></li>
         </ul>
     </div>
 </div><!--/span3-->
