--- a/beta/reach_us.html
+++ b/beta/reach_us.html
@@ -29,7 +29,12 @@
      </p><p>
       IIT Kanpur is also the first institute to offer helicopter services from Lucknow Airport to 
       IIT Kanpur airfield (inside the campus). The estimated charges are Rs. 6000 per person. If you would like to avail the facility please get in touch with SPO, since the helicopter service schedule is yet to be finalised.</p>
-
+      <p> There is also a single flight from New Delhi to Kanpur (AI 9605). 
+        <ul>
+          <li> AI 9605 :Delhi - Kanpur : Mon,Wed,Fri</li>
+          <li> AI 9605 :Kanpur - Delhi via (Allahabad) : Mon,Wed,Fri </li>
+        </ul></p><p>
+        This flight but has been subject to cancellation many times in the past, and hence is advised only if other options are unfeasible</p>
     </div>
 
     <div class="row-fluid">
@@ -48,7 +53,28 @@
       Kanpur is connected to NH-2 that runs between Amritsar and Kolkata and connecting cities like Delhi, Agra, Allahabad, Patna. Delhi is about 480 KM through this route. Kanpur is also connected to Lucknow on NH25 and is about 91 km from Lucknow. Kanpur is connected to Delhi (440 KM) through another parallel highway NH81 that through Ghaziabad and Aligarh.
     </p>
     </div>
-
+  <div class="row-fluid margin-bottom-30">
+        <div class="span3">
+          <div class="row-fluid">
+            <div class="headline"><h3>Office Address</h3></div>
+            <div class="row-fluid">
+            <address>
+              Students Placement Office<br /> 
+              109,Outreach Building,<br /> 
+              IIT Kanpur, Kanpur-208016<br /> 
+              UP, India.<br /> 
+              Phone: <a href="tel:+915122594433">91-512-259-4433/34</a><br /> 
+              Fax: 91-512-259-4434<br /> 
+              Email: <a href="mailto:spo@iitk.ac.in">spo@iitk.ac.in</a><br />
+            </address>
+            </div>
+          </div>
+        </div>
+        <div class="span9">
+            <div class="headline"><h3>Office Location</h3></div>
+            <div id="map" class="map map-box map-box-space margin-bottom-40"></div>
+        </div>
+    </div><!--/row-fluid-->
 
 
 
