--- a/beta/_navbar.html
+++ b/beta/_navbar.html
@@ -56,12 +56,14 @@
                                 <b class="caret"></b>                            
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="feature_grid.html">Career Guidance</a></li>
-                                <li><a href="feature_typography.html">Rules and Regulations</a></li>
-                                <li><a href="feature_thumbnail.html">Placement Automation System</a></li>
-                                <li><a href="feature_component.html">Internships</a></li>
-                                <li><a href="feature_navigation.html">Downloads</a></li>
-                                <li><a href="feature_table.html">FAQs</a></li>
+                                <li><a href="placement_policy.html">Placement Policy</a></li>
+                                <li><a href="intern_policy.html">Internship Policy</a></li>
+                                <li><a href="http://placement.iitk.ac.in">Placement Automation System (PAS)</a></li>
+                                <li><a href="http://spo.iitk.ac.in/preparation">Preparation Portal</a></li>
+                                <li><a href="#">FAQs</a></li>
+                                <li class="sub-heading"><a>Downloads</a></li>
+                                <li><a href="#">Leave Application</a></li>
+                                <li><a href="#">Project Verifcation Form</a></li> 
                             </ul>
                             <b class="caret-out"></b>                        
                         </li>
