--- a/beta/placement_policy.html
+++ b/beta/placement_policy.html
@@ -10,7 +10,7 @@
 <!--=== Breadcrumbs ===-->
 <div class="row-fluid breadcrumbs margin-bottom-40">
   <div class="container">
-        <h1 class="pull-left">Internship Policy 2013-14</h1>
+        <h1 class="pull-left">Placement Policy 2013-14</h1>
         
   </div><!--/container-->
 </div><!--/breadcrumbs-->
@@ -21,27 +21,46 @@
   <div class="span9">
     <div class="row-fluid">
     <div class="headline"><h3>Policy</h3></div>
-    <p>The internship policy will be applicable to all the students who apply for internships open through SPO , for the session  2013-14 ,and is to be followed during the entire duration of the session.</p>
+    <p>The placement policy will be applicable to all students registered for the 2013-14 campus placements of IIT Kanpur and is to be followed during the entire duration of the placement season.<em>This policy is currently under revision and final policy may have changes from the current one</em></p>
 
     <div class="headline"><h4>Eligibility</h4></div>
     <ul>
-      <li>Only <strong>3rd year Undergraduate or 4th year M.Sc. Integrated students</strong> can apply for internships through SPO. <strong>4th year Dual Degree students may be allowed</strong> for appearing if they are able to get a <strong>No Objection Certificate from their thesis guide</strong> at the time of application for the respective internship.</li>
-      <li>Student can register only once during an academic year.</li>
+      <li>Student of IIT Kanpur expected to complete his/her degree by July 2014 is eligible to register.</li>
+      <li><strong>Sponsored students</strong>, i.e. students under QIP or those who have signed any bond for pursuing studies at the IIT Kanpur must produce <strong>No Objection Certificate</strong> from the concerned authorities/ agencies prior to registering with SPO.</li>
+      <li>Students can register for placements only once.</li>
     </ul>
     </div><!--/row-fluid-->
-    <div class="headline"><h4>Rules &amp; Regulations</h4></div>
+    <div class="headline"><h4>Guidelines</h4></div>
     <ul>
-      <li> As soon as a <strong>student receives an internship offer</strong>, he/she is <strong>no longer eligible</strong> to apply for internships through SPO for the rest of the Internship Season.</li>
-      <li> A student must <strong>be present during the entire Summer Recruitment Process (including PPTs)</strong> of the company, if one has applied for its internship process.Monetary fine of INR 250 shall be imposed on a student who misses the PPT without any genuine reason.</li>
-      <li> If a student <strong>withdraws</strong> from a company's process (not attending any of the GDs, tests, PI, etc.) after applying (without any genuine reason*), one shall be <strong>deregistered from SPO</strong> and shall not be able to apply for any Internship through SPO for that session.</li>
-      <li> If a student gets an <strong>Internship from anywhere other than the SPO</strong>, he must inform the SPO as soon as possible by <strong>dropping a mail to <a href="mailto:sposecy@iitk.ac.in"><strong>sposecy@iitk.ac.in</strong></a></strong> so that all his applications for Internship could be withdrawn.</li>
-      <li> A student who  <strong>leaves the Internship of SPO</strong> before or during the stipulated internship period after getting selected, shall be termed as an <strong>Internship Defaulter</strong>. An Internship Defaulter shall be subjected to a penalty of being allowed to <strong>sit for only two companies in the first week (7 days) of placement season.</strong></li>
-      <li> If a student directly contacts a Company that comes through SPO, then it would be considered as an Off-Campus attempt.</li>
-      <li> In case of <strong>4th year Dual Degree students</strong>, if their Thesis Advisor withdraws the No Objection Certificate at a later stage, and the student does not complete his internship citing the same as reason, he <strong>would be dealt with as an internship defaulter.</strong> </li>
-      <li> If a student gets <strong>more than one offer in a single day</strong> then he has the option of <strong>choosing between them</strong> at the end of the day. The choice must be communicated to the SPO after the decision has been made.</li>
-      <li> <strong>Discrepancies, false claims or any objectionable content</strong> found in the resumes of a student would prevent him/her from taking part in any of the placement activities for that season and make him/her an <strong>Internship Defaulter.</strong><br />
-      * <small>Genuine reasons include health problems, academic clashes or other reasons subject to approval of Chairman, SPC</small></li>
+      <li>The role of the SPO (Students' Placement Office) is of a <strong>facilitator and counselor for placement related activities</strong>. SPO <strong>does NOT guarantee a job</strong>. Applying for a company or joining a company is entirely the responsibility/decision of the student concerned.</li>
+      <li>The placement facility is available to all the students registered with SPO throughthe policy <em>One job to one student at the first instance</em></li>
+      <li>There is <strong>no restriction</strong> on applying/appearing in interviews <strong>until the first job</strong> is secured. A student will be considered to have secured a job if his/her name appears in the selection list or an appointment letter is received in the SPO.</li>
+      <li>Students must keep their <strong>Identity Card</strong> with them at the time of PPT/Test/Group Discussion/ Interviews, and produce the same when demanded by the visiting team or SPO staff or their representatives.</li>
+      <li>Once a student has been shortlisted by a company for placement process he/she is NOT allowed to contact the members of the team visiting the campus for placement purpose without prior permission of the Chairman SPC.</li>
+      <li>The SPO strongly <strong>discourages the students to go for off campus placements in the companies that already come to IITK campus</strong> as this affects the company-institute relations adversely. Students are also requested to forward contacts they have, if any, in different companies so that SPO may formally invite these companies for placements.</li>
+      <li>If a student is found doctoring his/her resume submitted at SPO his/her registration at SPO will be cancelled immediately and also the matter will be referred to SSAC.</li>
     </ul>
+    <div class="headline"><h4>Pre-Placement Offers (PPO)</h4></div>
+    <ul>
+      <li>All Pre Placement Offers by any company whatsoever, extended to any student, have to be immediately intimated to the Placement Office by the student after registration. This also includes offers extended by companies that are not participating in the 2011-12 campus placements.</li>
+      <li>All companies contacted will also be asked in advance about any Pre Placement offers that have been extended by them and the company will be informed about our PPO policy in advance.</li>
+      <li>Also, any form of intimation from a company about the possibility of a PPO being granted in future should be informed to the Placement Office. The Placement Office will take up the matter with the company further and the student will be allowed to sign Job Announcement Form(JAF) as per the normal policy until a decision regarding the grant of a PPO is made.</li>
+      <li>A student offered a Pre Placement Offer through SPO must accept/reject the offer prior to the date specified by the company.</li>
+      <li>Students accepting or denying a PPO will have to immediately notify the Placement Office of the same. If the PPO is accepted, the job will be recorded and he/she will NOT be allowed to participate in the campus placements. However, he/she will be allowed to participate in the process if the offer is rejected. The rejection letter will be sent to the company through SPO.</li>
+    </ul>
+    <p>Any student found to have breached any of these rules or secured a PPO and not informed the placement office of the same will be debarred from the placement process. If at the time of breach the student is already placed, the company in which he/she is placed will be intimated of the violation. </p>
+    <div class="headline"><h4>Penalty Structure</h4></div>
+    <p>Each student will be assigned a total of 10 points at the time of registration with SPO. Points will be deducted from his record for misconduct as per the following rules. Losing all the 10 points or more will lead to deregistration from SPO. Re-registration may be done at the discretion of Chairman, SPC and/or after paying a monetary penalty.</p>
+    <ul>
+      <li>A student will be allowed to be exempted from compulsory attendance for PPT for a maximum of 2 companies due to genuine reasons* by filling a leave application form (which can be downloaded <code><a href="#">here</a></code> within 2 days after PPT.</li>
+      <li>Student will not be allowed to participate in the selection process of the company for which he/she has missed the PPT (Exempting the 2 companies missed due to genuine reasons). However, he/she may be allowed to participate in the process of that particular company after deduction of 4 points.</li>
+      <li>Opting out of the selection process of a company at any stage after applying may lead to deduction of minimum of 5 points and maximum of 10 points. For ex- 6 points for missing test, 7 for missing GD, 10 for missing interview.</li>
+      <li>Any sort of misbehaviour on the part of students which affects the decorum of the PPT or the selection process or the reputation of the SPO attracts a minimum penalty of 2 points. The fine may be increased at the discretion of the Placement Office as per the severity of the situation. eg- Asking inappropriate questions during PPT or Interview.</li>
+      <li>Cheating in all forms or marking proxies during the selection process is strictly prohibited and those caught indulging in such activities would lose all their points and debarred from the placement process. Also note that no concessions in any form shall be provided in such case.<br />
+      *<small> Genuine reasons include health problems or other reasons subject to approval of Chairman, SPC. PPT missed due to academic clashes will not be counted among the 2 companies. Attendance will be marked on submitting the PPT leave application form.</small>
+      </li>
+    </ul>
+    <div class="headline"><h4>Guidlines for Master Resume</h4></div>
   </div>
 <!--#include file="_sidebar.html" -->
 </div><!--row-fluid-->
