--- a/beta/placement_policy.html
+++ b/beta/placement_policy.html
@@ -61,6 +61,16 @@
       </li>
     </ul>
     <div class="headline"><h4>Guidlines for Master Resume</h4></div>
+    <ul>
+      <li>Master resume will NOT be sent to the company, you need to apply with a different resumefor every company.</li>
+      <li>No bar on the length of master resume, but each and every point will need verification.</li>
+      <li>The resume with which one applies for a particular company must be a subset of the master resume.</li>
+      <li>One cannot add/change any point/sub point that is written in the master resume while making his/her resume</li>
+      <li>One is allowed to delete points/sub points.</li>
+      <li>If you need to state your point in a different way for the technical and non-technical profile, we suggest you to include it in the master resume itself even if it causes repetition.</li>
+      <li>Any change in the master resume MUST be done with the permission of SPO; writing the same point in a different way will be considered as a 'change'.</li>
+      <li>Your resume, before being sent to the company, will be verified by the software and if found different from the master resume even by 5% then your application will get withdrawn from that company and will also attract penalty on the part of student.</li>
+    </ul>
   </div>
 <!--#include file="_sidebar.html" -->
 </div><!--row-fluid-->
