--- a/beta/chairman_message.html
+++ b/beta/chairman_message.html
@@ -34,7 +34,7 @@
       <p>If interested in making an early Pre-Placement Talk, please let us know the preferred date. PPTs are held after class hours, i.e. 6 PM onwards on weekdays &amp; 10 AM onwards on Saturdays up to mid-November leaving out the 4 day period of mid October which is scheduled for the cultural festival Antaragni.</p>
 
       <p>I take this opportunity to invite you for placements to IIT K.</p>
-
+      <p>&nbsp;</p><p>&nbsp;</p>
       <p>
       Dr. Vimal Kumar K<br/>
       Chairman<br/>
