--- a/beta/_navbar.html
+++ b/beta/_navbar.html
@@ -72,13 +72,12 @@
                                 <b class="caret"></b>                            
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="portfolio.html">Reach Us</a></li>
-                                <li><a href="portfolio_3columns.html">Contacts</a></li>
+                                <li><a href="reach_us.html">Reach IIT Kanpur</a></li>
+                                <li><a href="about_us.html">Contacts</a></li>
                             </ul>
                             <b class="caret-out"></b>                        
                         </li>              
-                        <li><a class="search"><i class="icon-search search-btn"></i></a>
-                        </li>                               
+                                      
                     </ul>
                     <div class="search-open">
                         <div class="input-append">
