--- a/beta/_sidebar.html
+++ b/beta/_sidebar.html
@@ -3,9 +3,9 @@
         <div class="headline"><h3>Quick Links</h3></div>
         <ul class="unstyled" style="font-size:larger">
             <li><a href="#">Company Registration</a></li>
-            <li><a href="#">Placement Automation System</a></li>
-            <li><a href="#">Preparation Portal </a> <!--<span class="label">Internal Link</span>--></li>
-            <li><a href="#">Individual Contacts</a></li>
+            <li><a href="http://placement.iitk.ac.in">Placement Automation System</a></li>
+            <li><a href="http://spo.iitk.ac.in/preparation">Preparation Portal </a> <!--<span class="label">Internal Link</span>--></li>
+            <li><a href="/about_us.html">Individual Contacts</a></li>
         </ul>
     </div>
 
