--- a/beta/about_us.html
+++ b/beta/about_us.html
@@ -239,14 +239,14 @@
 
  <tr>
   <td > Ankit Deo </td>
-<td >Aeronautical Engineering</td>
+<td >Aerospace Engineering</td>
 <td ><a href="mailto:ankitdi@iitk.ac.in">ankitdi@iitk.ac.in</td>
 <td >+91 7607490031</td>
 
 </tr>
  <tr>
   <td > K Kishore Kumar </td>
-<td >Aeronautical Engineering</td>
+<td >Aerospace Engineering</td>
 <td ><a href="mailto:kkkishor@iitk.ac.in">kkkishor@iitk.ac.in</td>
 <td >+91 7897768722</td>
 
