--- a/beta/_footer.html
+++ b/beta/_footer.html
@@ -36,13 +36,9 @@
                 <!-- Stay Connected -->
 		        <div class="headline"><h3>Stay Connected</h3></div>	
                 <ul class="social-icons">
-                    <li><a href="#" data-original-title="Feed" class="social_rss"></a></li>
                     <li><a href="#" data-original-title="Facebook" class="social_facebook"></a></li>
                     <li><a href="#" data-original-title="Twitter" class="social_twitter"></a></li>
-                    <li><a href="#" data-original-title="Goole Plus" class="social_googleplus"></a></li>
-                    <li><a href="#" data-original-title="Pinterest" class="social_pintrest"></a></li>
                     <li><a href="#" data-original-title="Linkedin" class="social_linkedin"></a></li>
-                    <li><a href="#" data-original-title="Vimeo" class="social_vimeo"></a></li>
                 </ul>
 			</div><!--/span4-->
 		</div><!--/row-fluid-->	
@@ -55,11 +51,8 @@
 	<div class="container">
 		<div class="row-fluid">
 			<div class="span8">						
-	            <p>2013 &copy; Students' Placement Office, IIT Kanpur ALL Rights Reserved. 
+	            <p>2013 &copy; Students' Placement Office, IIT Kanpur All Rights Reserved. 
 	          </div>
-			<div class="span4">	
-				<a href="index.html"><img id="logo-footer" src="assets/img/logo2-default.png" class="pull-right" alt="" /></a>
-			</div>
 		</div><!--/row-fluid-->
 	</div><!--/container-->	
 </div><!--/copyright-->	
