--- a/beta/index.html
+++ b/beta/index.html
@@ -77,7 +77,7 @@
                    <p> The hall mark of IIT K has always been relentless strive towards excellence and perfection. </p>
                 </blockquote>
                 </div>
-                <p><a href="chairman_message.html">Read more</p>
+                <p><a href="chairman_message.html">Read more</a></p>
             </div>
 
             
